--- a/Docker/php74/Dockerfile
+++ b/Docker/php74/Dockerfile
@@ -4,10 +4,21 @@ WORKDIR "/var/www/"
 ENV PHP_INI /usr/local/etc/php/php.ini
 
 RUN apt-get update \
-#    && apt-get install -y \
-#            libzip-dev \
-#            zip \
-#    && docker-php-ext-install zip mbstring pdo_mysql \
+    && apt-get install -y \
+        apt-utils \
+        curl \
+        pkg-config \
+        icu-devtools \
+        libicu-dev \
+        libcurl4 \
+        libcurl4-gnutls-dev \
+        libssl-dev \
+        libonig-dev \
+
+    && docker-php-ext-install bcmath \
+    && docker-php-ext-install mbstring \
+    && docker-php-source delete \
+
     && pecl install xdebug \
     && docker-php-ext-enable xdebug
 
