--- a/Worker/composer.json
+++ b/Worker/composer.json
@@ -15,6 +15,7 @@
     "symfony/flex": "^1.3.1",
     "symfony/framework-bundle": "*",
     "symfony/messenger": "4.*",
+    "symfony/monolog-bundle": "^3.6",
     "symfony/yaml": "*"
   },
   "require-dev": {
