--- a/Worker/config/packages/old_sound_rabbit_mq.yaml
+++ b/Worker/config/packages/old_sound_rabbit_mq.yaml
@@ -1,15 +1,39 @@
+parameters:
+    rabbit_mq_host: 'localhost'
+    rabbit_mq_port: 5672
+    rabbit_mq_user: gust
+    rabbit_mq_password: pass
+    rabbit_mq_vhost: '/'
+    rabbit_mq_lazy: false
+    rabbit_mq_connection_timeout: 3
+    rabbit_mq_read_write_timeout: 3
+    rabbit_mq_keepalive: false
+    rabbit_mq_heartbeat: 0
 old_sound_rabbit_mq:
     connections:
         default:
-            url: '%env(RABBITMQ_URL)%'
-#    producers:
-#        # use 'old_sound_rabbit_mq.task_producer' service to send data.
-#        task:
-#            connection:       default
-#            exchange_options: { name: 'task', type: direct }
-#    consumers:
-#        task:
-#            connection:       default
-#            exchange_options: { name: 'task', type: direct }
-#            queue_options:    { name: 'task'}
-#            callback:         App\Consumer\TaskConsumer
+            host: '%env(string:default:rabbit_mq_host:RABBITMQ_HOST)%'
+            port: '%env(string:default:rabbit_mq_port:RABBITMQ_PORT)%'
+            user: '%env(RABBITMQ_USER)%'
+            password: '%env(RABBITMQ_PASSWORD)%'
+            vhost: '%env(string:default:rabbit_mq_vhost:RABBITMQ_VHOST)%'
+            lazy: '%env(bool:default:rabbit_mq_lazy:RABBITMQ_LAZY)%'
+            connection_timeout: '%env(int:default:rabbit_mq_connection_timeout:RABBITMQ_CONNECTION_TIMEOUT)%'
+            read_write_timeout: '%env(int:default:rabbit_mq_read_write_timeout:RABBITMQ_READ_WRITE_TIMEOUT)%'
+
+            # requires php-amqplib v2.4.1+ and PHP5.4+
+            keepalive:  '%env(bool:default:rabbit_mq_keepalive:RABBITMQ_KEEPALIVE)%'
+
+            # requires php-amqplib v2.4.1+
+            heartbeat:  '%env(int:default:rabbit_mq_heartbeat:RABBITMQ_HEARTBEAT)%'
+    producers:
+        # use 'old_sound_rabbit_mq.task_producer' service to send data.
+        task:
+            connection:       default
+            exchange_options: { name: 'task', type: direct }
+    consumers:
+        task:
+            connection:       default
+            exchange_options: { name: 'task', type: direct }
+            queue_options:    { name: 'task'}
+            callback:         App\Consumer\TaskConsumer
