--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -41,12 +41,12 @@ services:
   php74-consumer:
     build: ./php74
     volumes:
-      - type: tmpfs
-        target: /var/www/mvc/var
-        tmpfs:
-          size: 1048576 # 1 MB
-        volume:
-          nocopy: true
+      #      - type: tmpfs
+      #        target: /var/www/mvc/var
+      #        tmpfs:
+      #          size: 1048576 # 1 MB
+      #        volume:
+      #          nocopy: true
       - type: bind
         source: ../Worker
         target: /var/www/mvc
@@ -59,7 +59,7 @@ services:
           cpus: '0.5'
           memory: 50M
         reservations:
-          cpus: '0.01'
+          cpus: '0.25'
           memory: 20M
     links:
       - rabbitmq
@@ -100,16 +100,13 @@ services:
     environment:
       - NGINX_PORT=80
       - PHP_FPM_PORT=9000
-
       - MVC_NGINX_HOST=${nginx_local_hostname_mvc}
       - MVC_NGINX_PORT=8081
       - MVC_FPM_HOST=${COMPOSE_PROJECT_NAME}-php74-mvc
       - MVC_PREFIX=mvc
-
       - TZ=UTC
     # command подменит в шаблоне входа переменные на значения из заданных переменных окружения
     command: /bin/bash -c "envsubst \"`for v in $$(compgen -v);do printf '$${%s} ' $$v;done`'\" < /etc/nginx/conf.template/mvc.conf > /etc/nginx/conf.d/mvc.conf && nginx -g 'daemon off;'"
-
     networks:
       - mvc-components-net
 
@@ -132,21 +129,6 @@ services:
       - "5672:5672"
     networks:
       - mvc-components-net
-
-#  mysql:
-#    container_name: ${COMPOSE_PROJECT_NAME}-mysql
-#    image: "mysql/mysql-server:5.7.21"
-#    restart: always
-#    environment:
-#      - MYSQL_ROOT_PASSWORD=devroot
-#      - TZ=UTC
-#    ports:
-#      - "${mysql_port_on_host}:3306"
-#    volumes:
-#      - "mysql_data:/var/lib/mysql"
-#      - "./mysql/initdb.sql:/docker-entrypoint-initdb.d/initdb.sql"
-#    networks:
-#      - mvc-components-net
 
 networks:
   mvc-components-net:
